feat: article and footer added

--- a/start.html
+++ b/start.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
-
+    <main>
+        <title>
+            <h1>
+                I MIEI ARTICOLI
+            </h1>
+        </title>
+        <section>
+            <article>
+                <h2>
+                    TITOLO ARTICOLO
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum sint impedit, consectetur illo aperiam ullam quod aliquid ratione quam inventore laudantium dolore veniam recusandae repellendus ex consequuntur atque! Quod, tempora.
+                </p>
+                <img src="assets/hands.png">
+                <img src="assets/laptop.png">
+            </article>
+        </section>
+    </main>
+        <footer>
+            <label>
+                <form action="#">
+                    <label for="form-email"> Email</label>
+                    <input type="email" id="form-email" required />
+                    <button type="submit" class="submit-button">Iscriviti alla newsletter</button>
+                </form>
+            </label>
+        </footer>
 </body>
 
 </html>
