--- a/start.html
+++ b/start.html
@@ -18,7 +18,7 @@
         <section>
             <article>
                 <h2>
-                    TITOLO ARTICOLO
+                    TITOLO ARTICOLO 123 123 123
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum sint impedit, consectetur illo aperiam ullam quod aliquid ratione quam inventore laudantium dolore veniam recusandae repellendus ex consequuntur atque! Quod, tempora.
@@ -38,5 +38,4 @@
             </label>
         </footer>
 </body>
-
 </html>
