feat: tag title replaced with header, tag figure added to imges, tag label deleted before form

--- a/start.html
+++ b/start.html
@@ -10,11 +10,11 @@
 
 <body>
     <main>
-        <title>
+        <header>
             <h1>
                 I MIEI ARTICOLI
             </h1>
-        </title>
+        </header>
         <section>
             <article>
                 <h2>
@@ -23,19 +23,21 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum sint impedit, consectetur illo aperiam ullam quod aliquid ratione quam inventore laudantium dolore veniam recusandae repellendus ex consequuntur atque! Quod, tempora.
                 </p>
-                <img src="assets/hands.png">
-                <img src="assets/laptop.png">
+                    <figure>
+                            <img src="assets/hands.png">
+                            <figcaption>Mani che digitano tastiera PC</figcaption>
+                            <img src="assets/laptop.png">
+                            <figcaption>PC appoggiato su scrivania</figcaption>
+                    </figure>
             </article>
         </section>
     </main>
         <footer>
-            <label>
                 <form action="#">
                     <label for="form-email"> Email</label>
                     <input type="email" id="form-email" required />
                     <button type="submit" class="submit-button">Iscriviti alla newsletter</button>
                 </form>
-            </label>
         </footer>
 </body>
 </html>
